handle dangling reference

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "What is Ownership?\n",
     "---\n",
+    "***\n",
     "\n",
     "Ownership is a set of rules that govern how a Rust program manages memory.  \n",
     "All programs have to manage the way they use a computer’s memory while running.  \n",
@@ -920,6 +921,7 @@
    "source": [
     "References and Borrowing\n",
     "---\n",
+    "***  \n",
     "\n",
     "> The issue with the tuple code above ^ is that we have to return the String to  \n",
     "the calling function so we can still use the String after the call to  \n",
@@ -1480,8 +1482,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dangling References\n",
-    "---"
+    "### Dangling References\n",
+    "\n",
+    "> Explain Dangling Reference like I am 5\n",
+    "\n",
+    "Imagine you have a favorite toy car that you always play with. One day, your mom  \n",
+    "tells you it's time to clean up your room and put all your toys away. So, you  \n",
+    "put your toy car in a special box and your mom puts the box on a high shelf,  \n",
+    "where **`you can't reach it`**.\n",
+    "\n",
+    "A \"dangling reference\" is like when you still remember where your toy car is and  \n",
+    "you try to play with it, but you can't because it's in the box on the high shelf.  \n",
+    "Just like you can't reach your toy car, a dangling reference in a program points  \n",
+    "to a memory location that it's not supposed to access anymore because the data  \n",
+    "has been cleaned up, just like your toy car was put away. This can cause  \n",
+    "problems and errors in the program, just like you might get sad or upset if you  \n",
+    "can't play with your favorite toy car.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "In languages with pointers, it’s easy to erroneously create a dangling pointer  \n",
+    "— a pointer that references a location in memory that may have been given to  \n",
+    "someone else—by freeing some memory while preserving a pointer to that memory.  \n",
+    "\n",
+    "In Rust, by contrast, the compiler guarantees that references will never be  \n",
+    "dangling references: \n",
+    "- if you have a reference to some data, the compiler will ensure that the data  \n",
+    "will not go out of scope before the reference to the data does.  \n",
+    "\n",
+    "Let’s try to create a dangling reference to see how Rust prevents them with a  \n",
+    "compile-time error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "missing lifetime specifier",
+     "output_type": "error",
+     "traceback": [
+      "fn dangle() -> &String{ // entering dangle scope",
+      "               ^ expected named lifetime parameter",
+      "missing lifetime specifier",
+      "help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from",
+      "help: consider using the `'static` lifetime\n\n'static"
+     ]
+    }
+   ],
+   "source": [
+    "{   // entering scope\n",
+    "    let reference_to_nothing = dangle(); // reference_to_nothing comes into scope\n",
+    "}   // exiting scope\n",
+    "\n",
+    "fn dangle() -> &String{ // entering dangle scope\n",
+    "    let s = String::from(\"Just Hanging Around Bro\"); // s enters scope \n",
+    "    &s  // reference to s is returned to calling function\n",
+    "}   // exiting dangle scope\n",
+    "    // s goes out of scope and is dropped, DEALLOCACTING it's memory (heap)\n",
+    "    // - the string \"Just Hanging Around Bro\" no longer exists ...\n",
+    "    //   but &s ref still points to that address in memory\n",
+    "\n",
+    "// This snippet will cause a compilation error\n",
+    "// because the main scope has a dangling reference to an address in memory that  \n",
+    "// is UNDEFINED\n",
+    "\n",
+    "/*\n",
+    "fn dangle() -> &String{ // entering dangle scope\n",
+    "               ^ expected named lifetime parameter\n",
+    "missing lifetime specifier\n",
+    "help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from\n",
+    "help: consider using the `'static` lifetime\n",
+    "\n",
+    "'static\n",
+    " */"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This code snippet demonstrates a common mistake in Rust: \n",
+    "- **`returning a reference to a local variable that goes out of scope`**  \n",
+    "\n",
+    "In this example, the `dangle` function returns a reference to the local variable  \n",
+    " `s`, which is deallocated when the function exits its scope.  This results in a  \n",
+    "dangling reference (`reference_to_nothing`) that points to an invalid memory  \n",
+    "location.\n",
+    "\n",
+    "Rust's ownership system and borrow checker prevent this mistake at compile time,  \n",
+    "so this code will not compile.\n",
+    "\n",
+    "> To fix this issue, you can return the `String` directly, transferring ownership  \n",
+    "to the calling function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid address found for => This Wandering String\n"
+     ]
+    }
+   ],
+   "source": [
+    "{   // entering scope\n",
+    "    let owned_value = no_dangle();  // owned value enters scope\n",
+    "                                    // scope is responsible for dropping owned_value\n",
+    "    println!(\"Valid address found for => {}\", owned_value);\n",
+    "}   // exiting scope\n",
+    "    // owned_value goes out of scope and is dropped, DEALLOCATING it's memory (heap)\n",
+    "\n",
+    "fn no_dangle() -> String { // no_dangle will return a string to the calling function\n",
+    "    let s = String::from(\"This Wandering String\"); // s enters scope\n",
+    "    s   // s FULL OWNERSHIP is moved to to the calling function, on scope exit\n",
+    "        // unlike dangle() which returns only a REFERENCE to s on scope exit\n",
+    "}   // no_dangle scope ends\n",
+    "    // s ownership is moved to be the responsibility of the calling function"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code snippet demonstrates the correct way to return a value from a function  \n",
+    "in Rust without creating a dangling reference. In this example, the `no_dangle`  \n",
+    "function returns the `String` `s` directly, transferring its ownership to the  \n",
+    "calling function. The calling function's scope is then responsible for dropping  \n",
+    "the `owned_value` and deallocating its memory when it goes out of scope."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **`The Rules of Reference`**\n",
+    "\n",
+    "Let’s recap what we’ve discussed about references:\n",
+    "\n",
+    "At any given time, you can have either : \n",
+    "\n",
+    "- one mutable reference \n",
+    "- or any number of immutable references.  \n",
+    "\n",
+    "> References must always be valid."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Slice Type\n",
+    "---\n",
+    "***"
    ]
   }
  ],
