A real "mature" Example

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -1653,7 +1653,227 @@
    "source": [
     "The Slice Type\n",
     "---\n",
-    "***"
+    "***\n",
+    "\n",
+    "Slices let you reference a contiguous sequence of elements in a collection  \n",
+    "rather than the whole collection. \n",
+    "\n",
+    "> A slice is a kind of reference, so it does not have ownership.  \n",
+    "\n",
+    "Here’s a small programming problem: \n",
+    "- write a function that takes a string of words separated by spaces  \n",
+    "- and returns the first word it finds in that string. \n",
+    "- If the function doesn’t find a space in the string, the whole string must be  \n",
+    "one word, so the entire string should be returned.\n",
+    "\n",
+    "> Let’s work through how we’d write the signature of this function without using  \n",
+    "slices, to understand the problem that slices will solve:\n",
+    "\n",
+    "\n",
+    "```rust\n",
+    "// The first_word function has a &String as a parameter ...\n",
+    "// We don’t want ownership, so this is fine\n",
+    "\n",
+    "fn first_word(s: &String) -> ? // But what should we return?\n",
+    "```\n",
+    "\n",
+    "We don’t really have a way to talk about **`part of a string`**. However, we could  \n",
+    "**`return the index of the end of the word`**, indicated by a space. \n",
+    "\n",
+    "> Let’s try that :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index_first_word [5]\n",
+      "first half [hello] second half [world]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn first_word(s: &String) -> usize{\n",
+    "    let bytes = s.as_bytes();\n",
+    "    for (i, &item) in bytes.iter().enumerate(){\n",
+    "        if item == b' '{\n",
+    "            return i;   // return index of the first space char found\n",
+    "                        // this correlates to the end of the first word\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    s.len() // no space found, we assume this is a single word\n",
+    "            // so we return the length of the string\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let mut s = String::from(\"hello world\");\n",
+    "    let index_first_word = first_word(&s);\n",
+    "    println!(\"index_first_word [{}]\", index_first_word);\n",
+    "\n",
+    "    // let hello = &s[0..5];\n",
+    "    // let world = &s[6..11];\n",
+    "    let hello = &s[0..index_first_word];\n",
+    "    let world = &s[(index_first_word+1)..s.len()];\n",
+    "\n",
+    "    println!(\"first half [{}] second half [{}]\", hello, world);\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rather than a reference to the entire String, hello is : \n",
+    "\n",
+    "- a reference to a portion of the String, \n",
+    "- specified in the extra [0..5] bit.  \n",
+    "\n",
+    "We create slices using a range within brackets by specifying  \n",
+    "[starting_index..ending_index], where starting_index is the first position in  \n",
+    "the slice and ending_index is one more than the last position in the slice.  \n",
+    "\n",
+    "Internally, the slice data structure stores :  \n",
+    "- the starting position and the length of the slice, \n",
+    "- which corresponds to ending_index minus starting_index. \n",
+    "\n",
+    "> So, in the case of let world = &s[6..11];, world would be a slice that contains:   \n",
+    "> - a pointer to the byte at index 6 of s  \n",
+    "> - with a length value of 5.\n",
+    "\n",
+    "<img src=\"https://doc.rust-lang.org/book/img/trpl04-06.svg\" width=50% height=50%>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Help explain rust owner ship with respect to shadowing variables : In a given closure, when I let var1 = 1, then I shadow it with var1  = 2, walk me through what is happening with ownership while in a closure and what happens when that closure exits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slice [3..len] => lo // explicit start/end expression\n",
+      "slice [3..]    => lo // '[start..]' implicit goes to end\n",
+      "slice [0..len] => hello // explict 0 to len of full slice\n",
+      "slice [..]     => hello // implicit .. begin to end full slice\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Rust slice syntax explictt vs implicit examples\n",
+    "{\n",
+    "    let s = String::from(\"hello\");  // s comes into scope\n",
+    "    let len = s.len();              // len comes into scope\n",
+    "\n",
+    "    let slice = &s[3..len]; // slice comes into scope\n",
+    "    println!(\"slice [3..len] => {slice} // explicit start/end expression\");\n",
+    "    let slice = &s[3..];    // slice\n",
+    "    println!(\"slice [3..]    => {slice} // '[start..]' implicit goes to end\");\n",
+    "\n",
+    "    let slice = &s[0..len];\n",
+    "    println!(\"slice [0..len] => {slice} // explict 0 to len of full slice\");\n",
+    "    let slice = &s[..];\n",
+    "    println!(\"slice [..]     => {slice} // implicit .. begin to end full slice\");\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A real \"mature\" Example lol\n",
+    "\n",
+    "Shadow MIGHT be ok to track a ==VALUE== across ==TYPE casting==, like from  \n",
+    "&str to char #i-might-not-stab-you"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "her preference => D len > 1 of type [= &str =]\n",
+      "the size she's getting D of type [= char =] lol\n"
+     ]
+    }
+   ],
+   "source": [
+    "{   // enter closure\n",
+    "    let s = String::from(\"Giving her a D\"); // s comes into scope\n",
+    "    let len = s.len();  // len comes into scope\n",
+    "\n",
+    "    // retrives the last character \"D\" as a string slice\n",
+    "    let d_for_her = &s[(len-1)..len]; // (a) d_for_her comes into scope\n",
+    "\n",
+    "    // verify that type is &string\n",
+    "    let mut type_name = get_type_name(&d_for_her); // mut type_name comes into scope\n",
+    "    println!(\"her preference => {} len > {} of type [= {} =]\", d_for_her, d_for_her.len(), type_name);\n",
+    "\n",
+    "    // SHADOW (a) d_for_her => &str with (b) d_for_her => char\n",
+    "    let d_for_her = d_for_her.chars().next().unwrap(); // (b) d_for_her comes into scope\n",
+    "    // verify that type is now char\n",
+    "    type_name = get_type_name(&d_for_her); \n",
+    "    println!(\"the size she's getting {} of type [= {} =] lol\", d_for_her, type_name);\n",
+    "}   // Exit closure\n",
+    "    // Variables go out of scope and are dropped in reverse order:\n",
+    "    // - d_for_her (b - shadow of type charr) is dropped (char is popped off the STACK)\n",
+    "    // - type_name is dropped\n",
+    "    // - d_for_her (a - shadowed of type &str) is dropped, DEALLOCATING it's memory (heap)\n",
+    "    // - len is dropped\n",
+    "    // - s is dropped, DEALLOCATING it's memory (heap)\n",
+    "    // Closure exited"
    ]
   }
  ],
