--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -1825,6 +1825,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Note: String slice range indices must occur at valid UTF-8 character  \n",
+    "boundaries. If you attempt to create a string slice in the middle of a multibyte  \n",
+    "character, your program will exit with an error. For the purposes of introducing  \n",
+    "string slices, we are assuming ASCII only in this section; a more thorough  \n",
+    "discussion of UTF-8 handling is in the “Storing UTF-8 Encoded Text with Strings”  \n",
+    "section of Chapter 8."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A real \"mature\" Example lol\n",
     "\n",
     "Shadow MIGHT be ok to track a ==VALUE== across ==TYPE casting==, like from  \n",
@@ -1874,6 +1887,289 @@
     "    // - len is dropped\n",
     "    // - s is dropped, DEALLOCATING it's memory (heap)\n",
     "    // Closure exited"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With all this information in mind, let’s rewrite first_word to return a slice.  \n",
+    "The type that signifies “string slice” is written as &str:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first word => terrible\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Define a function that takes a reference to a string and returns a string slice\n",
+    "fn first_word(s: &str) -> &str{  // scope starts\n",
+    "                                    // s is a reference to a String, \n",
+    "                                    // - no ownership is taken\n",
+    "                                    // - scope is NOT responsible for dropping s\n",
+    "                                    // scope will return a reference to a slice of s\n",
+    "                                    // to the calling function to TAKE OWNERSHIP of\n",
+    "    let bytes = s.as_bytes();   // bytes comes into scope (it's a &[u8])\n",
+    "                                // ... but because the length of the byte array \n",
+    "                                // is UNKNOWN at compile time => HEAP\n",
+    "\n",
+    "    for (i, item) in bytes.iter().enumerate(){\n",
+    "        if *item == b' '{\n",
+    "            // on first item to == ' ' return the slice to this index\n",
+    "            // - this is our first word\n",
+    "            return &s[0..i] // scope will return a reference to a slice of s\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // else return the full slice\n",
+    "    // - either it's one word\n",
+    "    // - or no space was found\n",
+    "    // - or no words???\n",
+    "    &s[..] // scope will return a reference to a slice of s\n",
+    "}   // scope ends\n",
+    "    // bytes is dropped, DEALLOCATING it's memory (heap)\n",
+    "    // - @note because the size of the byte array is UNKNOWN at compile time => HEAP\n",
+    "\n",
+    "{   // enter closure\n",
+    "    let mut s = String::from(\"terrible lunch walk conversation with Amy\"); // s comes into scope\n",
+    "\n",
+    "    let word = first_word(&s);  // word comes into scope\n",
+    "    // s.clear(); // error! @audit ... I don't understand what the issue is\n",
+    "    println!(\"first word => {}\", word);\n",
+    "}   // exit closure\n",
+    "    // WRONG!!** word is dropped, DEALLOCATING it's memory (heap) ** WRONG!!!\n",
+    "    // word is a REFERENCE to a SLICE of s ... and are stored on the STACK\n",
+    "    // - word is dropped but NO HEAP memory is deallocated\n",
+    "    // s is dropped, DEALLOCATING it's memory (heap)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recall from the borrowing rules that if we have an immutable reference to  \n",
+    "something, we cannot also take a mutable reference. \n",
+    "\n",
+    "- Because `clear` needs to truncate the String, it `needs to get a mutable reference`. \n",
+    "- The `println!` after the call to clear `uses the reference in word`, so the  \n",
+    "immutable reference `must still be active at that point`. \n",
+    "\n",
+    "Rust disallows : \n",
+    "- the mutable reference in **`clear`** \n",
+    "- AND the immutable reference in **`word`** from `existing at the same time` \n",
+    "- compilation FAILS as a result\n",
+    "\n",
+    "> Not only has Rust made our API easier to use, but it has also eliminated an  \n",
+    "entire class of errors at compile time!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have a straightforward API that’s much harder to mess up because the  \n",
+    "compiler will ensure the references into the String remain valid. Remember the  \n",
+    "bug in the program in Listing 4-8, when we got the index to the end of the first  \n",
+    "word but then cleared the string so our index was invalid? That code was  \n",
+    "logically incorrect but didn’t show any immediate errors. \n",
+    "\n",
+    "The problems would show up later if we kept trying to use the first word index  \n",
+    "with an emptied string.  \n",
+    "\n",
+    "> Slices make this bug impossible and let us know we have a problem with our code  \n",
+    "much sooner.  \n",
+    "\n",
+    "Using the slice version of first_word will throw a compile-time error:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String Literals as Slices\n",
+    "\n",
+    "Recall that we talked about string literals being stored inside the binary. Now  \n",
+    "that we know about slices, we can properly understand string literals:\n",
+    "\n",
+    "```rust\n",
+    "let s = \"Hello, world!\";\n",
+    "```\n",
+    "\n",
+    "The type of s here is &str: it’s a slice pointing to that specific point of the  \n",
+    "binary. This is also why string literals are immutable; &str is an immutable  \n",
+    "reference."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### String Slices as Parameters\n",
+    "\n",
+    "Knowing that you can take slices of literals and String values leads us to one  \n",
+    "more improvement on first_word, and that’s its signature:\n",
+    "\n",
+    "```rust\n",
+    "fn first_word(s: &String) -> &str { ... }\n",
+    "```\n",
+    "\n",
+    "A more experienced Rustacean would write the signature shown in Listing 4-9  \n",
+    "instead because it allows us to use the same function on both &String values  \n",
+    "and &str values.\n",
+    "\n",
+    "```rust\n",
+    "fn first_word(s: &str) -> &str { ... }\n",
+    "```\n",
+    "\n",
+    "> Listing 4-9: Improving the first_word function by using a string slice for the  \n",
+    "type of the s parameter\n",
+    "\n",
+    "If we have a string slice, we can pass that directly. If we have a String, we  \n",
+    "can pass a slice of the String or a reference to the String. This flexibility  \n",
+    "takes advantage of deref coercions, a feature we will cover in  \n",
+    "“Implicit Deref Coercions with Functions and Methods” section of Chapter 15.\n",
+    "\n",
+    "Defining a function to take a string slice instead of a reference to a String  \n",
+    "makes our API more general and useful without losing any functionality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first word => &my_string[0..4] [hell]\n",
+      "first word => &my_string[..] [hello]\n",
+      "first word => &my_string [hello]\n",
+      "first word => &my_string_literal[0..3] [hey]\n",
+      "first word => &my_string_literal[..] [heyao]\n",
+      "first word => &my_string_literal [heyao]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let my_string = String::from(\"hello world\");\n",
+    "\n",
+    "    // first_word works on slices of 'String's, whether partial or full\n",
+    "    let word = first_word(&my_string[0..4]);\n",
+    "    println!(\"first word => &my_string[0..4] [{}]\", word); // hell\n",
+    "    let word = first_word(&my_string[..]);\n",
+    "    println!(\"first word => &my_string[..] [{}]\", word); // hello\n",
+    "    \n",
+    "    // first_word also works on reference to Strings, which are equivalent\n",
+    "    // to whole slices of Strings\n",
+    "    let word = first_word(&my_string);\n",
+    "    println!(\"first word => &my_string [{}]\", word); // hello\n",
+    "\n",
+    "    let my_string_literal = \"heyao world\";\n",
+    "    \n",
+    "    // first_word works on slicees of literals, whether partial or whole\n",
+    "    let word = first_word(&my_string_literal[0..3]);\n",
+    "    println!(\"first word => &my_string_literal[0..3] [{}]\", word); // hey\n",
+    "    let word = first_word(&my_string_literal[..]);\n",
+    "    println!(\"first word => &my_string_literal[..] [{}]\", word); // heyao\n",
+    "\n",
+    "    // because string literals *are* string slices already,\n",
+    "    // this works too, without the slice syntax!\n",
+    "    let word = first_word(my_string_literal);\n",
+    "    println!(\"first word => &my_string_literal [{}]\", word); // heyao\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Other Slices\n",
+    "\n",
+    "String slices, as you might imagine, are specific to strings. But there’s a more  \n",
+    "general slice type too. Consider this array:\n",
+    "\n",
+    "```rust\n",
+    "let a = [1, 2, 3, 4, 5];\n",
+    "```\n",
+    "Just as we might want to refer to part of a string, we might want to refer to  \n",
+    "part of an array. We’d do so like this:\n",
+    "\n",
+    "```rust\n",
+    "let a = [1, 2, 3, 4, 5];\n",
+    "\n",
+    "let slice = &a[1..3];\n",
+    "\n",
+    "assert_eq!(slice, &[2, 3]);\n",
+    "```\n",
+    "This slice has the type &[i32]. It works the same way as string slices do, by  \n",
+    "storing a reference to the first element and a length. You’ll use this kind of  \n",
+    "slice for all sorts of other collections. We’ll discuss these collections in  \n",
+    "detail when we talk about vectors in Chapter 8."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SUMMARY\n",
+    "---\n",
+    "\n",
+    "The concepts of ownership, borrowing, and slices ensure memory safety in Rust  \n",
+    "programs at compile time. The Rust language gives you control over your memory  \n",
+    "usage in the same way as other systems programming languages, but having the  \n",
+    "owner of data automatically clean up that data when the owner goes out of scope  \n",
+    "means you don’t have to write and debug extra code to get this control.\n",
+    "\n",
+    "Ownership affects how lots of other parts of Rust work, so we’ll talk about  \n",
+    "these concepts further throughout the rest of the book. Let’s move on to  \n",
+    "Chapter 5 and look at grouping pieces of data together in a struct."
    ]
   }
  ],
