Inlining mod in jupyter ch_07

--- a/rusty_jeep_project/rust_the_book_exercise/ch_07_managing_project_structure.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/ch_07_managing_project_structure.ipynb
@@ -31,6 +31,7 @@
     "Packages and Crates\n",
     "---\n",
     "\n",
+    "### Crate\n",
     "A crate is the smallest amount of code that the Rust compiler considers at a  \n",
     "time. Even if you run rustc rather than cargo and pass a single source code file  \n",
     "(as we did all the way back in the “Writing and Running a Rust Program” section  \n",
@@ -49,15 +50,256 @@
     "multiple projects. For example, the rand crate we used in Chapter 2 provides  \n",
     "functionality that generates random numbers. Most of the time when Rustaceans  \n",
     "say “crate”, they mean library crate, and they use “crate” interchangeably with  \n",
-    "the general programming concept of a “library\"."
+    "the general programming concept of a “library\".\n",
+    "\n",
+    "The crate root is a source file that the Rust compiler starts from and makes up  \n",
+    "the root module of your crate (we’ll explain modules in depth in the  \n",
+    "“Defining Modules to Control Scope and Privacy” section)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Package\n",
+    "\n",
+    "A package is a bundle of one or more crates that provides a set of functionality.  \n",
+    "A package contains a Cargo.toml file that describes how to build those crates.  \n",
+    "Cargo is actually a package that contains the binary crate for the command-line  \n",
+    "tool you’ve been using to build your code. The Cargo package also contains a  \n",
+    "library crate that the binary crate depends on. Other projects can depend on the  \n",
+    "Cargo library crate to use the same logic the Cargo command-line tool uses.\n",
+    "\n",
+    "A package can contain : \n",
+    "- as many binary crates as you like \n",
+    "- but at most only one library crate. \n",
+    "- a package must contain at least one crate, whether that’s a library or  \n",
+    "binary crate."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cargo\n",
+    "\n",
+    "Let’s walk through what happens when we create a package.  First, we enter the  \n",
+    "command cargo new :\n",
+    "\n",
+    "```sh\n",
+    "$ cargo new my-project\n",
+    "     Created binary (application) `my-project` package\n",
+    "$ ls my-project\n",
+    "Cargo.toml\n",
+    "src\n",
+    "$ ls my-project/src\n",
+    "main.rs\n",
+    "```\n",
+    "\n",
+    "After we run cargo new, we use ls to see what Cargo creates.  \n",
+    "\n",
+    "In the project directory, there’s a : \n",
+    "- **`Cargo.toml`** file, giving us a **`package`** \n",
+    "- a **`src`** directory that contains **`main.rs`** \n",
+    "\n",
+    "Open Cargo.toml in your text editor, and note there’s no mention of src/main.rs.  \n",
+    "\n",
+    "That's because Cargo follows an IMPLICIT convention that : \n",
+    "- **`src/main.rs`** is the crate **`root of a binary crate`** with the same name  \n",
+    "as the package. \n",
+    "- if the package directory contains **`src/lib.rs`**, the package contains a  \n",
+    "library crate with the same name as the package, and src/lib.rs is its crate root. \n",
+    "\n",
+    "Cargo passes the crate root files to **`rustc`** to build the library or binary.  \n",
+    "\n",
+    "Here, we have a package that only contains src/main.rs, meaning:  \n",
+    "- it only contains a binary crate named my-project \n",
+    "\n",
+    "If a package contains src/main.rs and src/lib.rs :\n",
+    "- it has two crates: a binary and a library,  \n",
+    "- both with the same name as the package.  \n",
+    "\n",
+    "A package can have multiple binary crates by placing files in the src/bin  \n",
+    "directory: each file will be a separate binary crate."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining Modules to Control Scope and Privacy\n",
+    "---\n",
+    "\n",
+    "In this section, we’ll talk about modules and other parts of the module system :\n",
+    "- **`paths`** that allow you to name items \n",
+    "- the **`use`** keyword that brings a path into scope \n",
+    "- the **`pub`** keyword to make items public.  \n",
+    "\n",
+    "We’ll also discuss the :\n",
+    "\n",
+    "- **`as`** keyword, \n",
+    "- **`external packages`**  \n",
+    "- and the **`glob`** operator.\n",
+    "\n",
+    "First, we’re going to start with a list of rules for easy reference when you’re  \n",
+    "organizing your code in the future. Then we’ll explain each of the rules in  \n",
+    "detail."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Module Cheat Sheet\n",
+    "\n",
+    "Here we provide a quick reference on how modules, paths, the use keyword, and  \n",
+    "the pub keyword work in the compiler, and how most developers organize their  \n",
+    "code. We’ll be going through examples of each of these rules throughout this  \n",
+    "chapter, but this is a great place to refer to as a reminder of how modules  \n",
+    "work.\n",
+    "\n",
+    "- **`Start from the crate root:`** When compiling a crate, the compiler first  \n",
+    "looks in the crate root file (usually src/lib.rs for a library crate or  \n",
+    "src/main.rs for a binary crate) for code to compile.\n",
+    "- **`Declaring modules:`** In the crate root file, you can declare new modules;  \n",
+    "say, you declare a “garden” module with mod garden;. The compiler will look for  \n",
+    "the module’s code in these places:\n",
+    "    - Inline, within curly brackets that replace the semicolon following mod  \n",
+    "    garden\n",
+    "    - In the file src/garden.rs  \n",
+    "    - In the file src/garden/mod.rs  \n",
+    "- **`Declaring submodules:`** In any file other than the crate root, you can  \n",
+    "declare submodules. For example, you might declare `mod vegetables;` in  \n",
+    "src/garden.rs. The compiler will look for the submodule’s code within the  \n",
+    "directory named for the parent module in these places:  \n",
+    "    - Inline, directly following mod vegetables, within curly brackets instead  \n",
+    "    of the semicolon\n",
+    "    - In the file src/garden/vegetables.rs  \n",
+    "    - In the file src/garden/vegetables/mod.rs  \n",
+    "- **`Paths to code in modules:`** Once a module is part of your crate, you can  \n",
+    "refer to code in that module from anywhere else in that same crate, as long as  \n",
+    "the privacy rules allow, using the path to the code. For example, an `Asparagus`  \n",
+    "type in the garden vegetables module would be found at  \n",
+    "`crate::garden::vegetables::Asparagus`.  \n",
+    "- **`Private vs public:`** Code within a module is private from its parent  \n",
+    "modules by default. To make a module public, declare it :  \n",
+    "    - with `pub mod` instead of `mod.`  \n",
+    "To make items within a public module public as well : \n",
+    "    - use `pub` before their declarations.\n",
+    "- **`The use keyword:`** Within a scope, the `use` keyword creates shortcuts to  \n",
+    "items to reduce repetition of long paths. In any scope that can refer to :  \n",
+    "    - `crate::garden::vegetables::Asparagus`,  \n",
+    "    - you can create a shortcut with `use crate::garden::vegetables::Asparagus;` \n",
+    "    - and from then on you only need to write `Asparagus` to make use of that  \n",
+    "    type in the scope."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we create a binary crate named backyard that illustrates these rules.  \n",
+    "The crate’s directory, also named backyard, contains these files and  \n",
+    "directories:  \n",
+    "\n",
+    "```sh\n",
+    "backyard  \n",
+    "├── Cargo.lock  \n",
+    "├── Cargo.toml  \n",
+    "└── src  \n",
+    "    ├── garden  \n",
+    "    │   └── vegetables.rs  \n",
+    "    ├── garden.rs  \n",
+    "    └── main.rs  \n",
+    "```\n",
+    "\n",
+    "The crate root file in this case is `src/main.rs`, and it contains:\n",
+    "\n",
+    "Filename: `src/main.rs`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I apologize for the confusion in my previous response. It seems that the `:code` command I suggested is not supported in the Rust kernel for Jupyter Notebook. \n",
+    "\n",
+    "In this case, you can use a workaround by defining the module directly in the notebook cell. Copy the content of your `vegetable.rs` file into a new cell, and declare the module using the `mod` keyword:\n",
+    "\n",
+    "```rust\n",
+    "mod vegetable {\n",
+    "    #[derive(Debug)]\n",
+    "    pub struct Asparagus {}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Now you should be able to use the `vegetable` module in your Jupyter Notebook:\n",
+    "\n",
+    "```rust\n",
+    "let asparagus = vegetable::Asparagus {};\n",
+    "println!(\"Asparagus: {:?}\", asparagus);\n",
+    "```\n",
+    "\n",
+    "Keep in mind that this approach may not be ideal for larger modules or more complex project structures. The Rust kernel for Jupyter Notebook is still a relatively new and evolving ecosystem, and some advanced features may not be available or work differently compared to a standard Rust development environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am growing Asparagus\n",
+      "But Imma only going to eat Beet\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Because we are in a Jupyter cell environment, we are inlining this module\n",
+    "// Pretend that it's in ../src/garden/vegetable.rs lol\n",
+    "mod vegetable {\n",
+    "    #[derive(Debug)]\n",
+    "    pub struct Asparagus {}\n",
+    "\n",
+    "    #[derive(Debug)]\n",
+    "    pub struct Carrot {}\n",
+    "\n",
+    "    #[derive(Debug)]\n",
+    "    pub struct Beet {}\n",
+    "}\n",
+    "\n",
+    "{   // closure starts\n",
+    "    // pretend that we are importing this crate from ../src/garden/vegetable.rs\n",
+    "    use crate::vegetable;\n",
+    "\n",
+    "    let plant = vegetable::Asparagus{}; // plant(a) comes into scope\n",
+    "    println!(\"I am growing {:?}\", plant);\n",
+    "    // @todo : why can't I mut plant instead of shadowing it?\n",
+    "    // ANSWER:\n",
+    "    // Shadowing is the correct approach where the variable's TYPE is CHANGING\n",
+    "    // In this case, you are assigning completely different types to the `plant` \n",
+    "    // variable: \n",
+    "    // - first an instance of `Asparagus`, \n",
+    "    // - and then an instance of `Beet`. \n",
+    "    let plant = vegetable::Beet{}; // plant(b) comees into scope and shadows plant(a)\n",
+    "    println!(\"But Imma only going to eat {:?}\", plant);\n",
+    "}   // closure ends\n",
+    "    // plant(b) goes out of scope\n",
+    "    // plant(a) goes out of scope"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +309,12 @@
    "name": "rust"
   },
   "language_info": {
-   "name": "rust"
+   "codemirror_mode": "rust",
+   "file_extension": ".rs",
+   "mimetype": "text/rust",
+   "name": "Rust",
+   "pygment_lexer": "rust",
+   "version": ""
   },
   "orig_nbformat": 4
  },
